--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ readme = "README.md"
 packages = [{include = "latent_landmarks"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 mujoco = "^2.3.0"
 gymnasium = "^0.26.3"
 imageio = "^2.22.4"
 mujoco-py = "^2.1.2.14"
 pytest = "^7.2.0"
+torch = "^1.13.0"
+tensorflow = "^2.10.0"
 
 
 [build-system]
